@startuml
skinparam linetype ortho
skinparam nodesep 70
skinparam ranksep 90
skinparam classAttributeIconSize 0


interface Jeu {
  +evoluer(Commande c)
  +etreFini(): boolean
}

interface DessinJeu {
  +dessiner(BufferedImage im)
}


class MainPerso {
  +main(String[] args)
}

'
class LabyrintheDessin {
  -{static} TAILLE: int
  +dessiner(BufferedImage image)
}

class JeuPerso {
  -direction: int
  -animX: int
  -animY: int
  -animTimer: int
  +evoluer(Commande c)
  +etreFini(): boolean
  +trouverCible(x,y): Personnage
  +getLabyrinthe(): Labyrinthe
  +getHero(): Hero
  +getMonstre(): Monstre
  +getPhantome(): Phantome
}

class Labyrinthe {
  -grille: char[][]
  +estLibre(x,y): boolean
  +estLibrePhantome(x,y): boolean
  +getGrille(): char[][]
  +getHero(): Hero
  +getMonstre(): Monstre
  +getPhantome(): Phantome
  +getSortie(): Position
}


class Hero {
  -degatPhysique: int
  +deplacer(x, y)
  +attaquer(cible, dx, dy)
  +perdreVie(int d)
  +subirDegatPhysique(int coup): int
  +Charge(dir, lab, monstre)
  +estMort(): boolean
}

class Monstre {
  -cooldown: int
  -degatFixe: int
  -etatDash: int
  -dashX: int
  -dashY: int
  -etapesDash: int
  +deplacer(Labyrinthe)
  +Dash(Labyrinthe, Hero)
  +subirDegatPhysique(int coup): int
}

class Phantome {
  -{static} sort: int
  -random: Random
  -cooldown: int
  +attaque(cible, dx, dy)
  +deplacer(Labyrinthe)
  +subirDegatPhysique(int coup): int
}

abstract class Personnage {
  #vie: int
  +getPos(): Position
  +getVie(): int
  +estVivant(): boolean
  +{abstract} subirDegatPhysique(int coup): int
}

class Position {
  +x: int
  +y: int
}

' ── Implémentations ──
JeuPerso ..|> Jeu
LabyrintheDessin ..|> DessinJeu

' ── Hiérarchie principale (Main vers Moteurs) ──
MainPerso -down-> LabyrintheDessin
MainPerso -down-> JeuPerso
MainPerso -down-> Labyrinthe

LabyrintheDessin -right-> JeuPerso : -jeu
JeuPerso -right-> Labyrinthe : -labyrinthe

' ── Liaisons vers les acteurs (Vers le bas) ──
JeuPerso -down-> Hero : -hero
JeuPerso -down-> Monstre : -monstre
JeuPerso -down-> Phantome : -phantome

Labyrinthe -down-> Hero : -hero
Labyrinthe -down-> Monstre : -monstre
Labyrinthe -down-> Phantome : -phantome
Labyrinthe -down-> Position : -sortie

' ── Héritage (Acteurs vers Personnage en bas) ──
Hero -down-|> Personnage
Monstre -down-|> Personnage
Phantome -down-|> Personnage

Personnage -right-> Position : #pos

@enduml